Success! It's now serving the app.html.

--- a/vhost.conf
+++ b/vhost.conf
@@ -1,6 +1,6 @@
 server {
   listen 80;
-  server_name 101ideas.cz;
+  server_name 101ideas.cz default_server;
 
   # This returns HTTP 200 on any
   # route and serves build.html.
