--- a/bower.json
+++ b/bower.json
@@ -9,9 +9,7 @@
   "private": true,
   "ignore": [
     "**/.*",
-    "node_modules",
     "bower_components",
-    "test",
-    "tests"
+    "test"
   ]
 }
