--- a/vhost.conf
+++ b/vhost.conf
@@ -1,6 +1,6 @@
 server {
   listen 80;
-  server_name 101ideas.cz default_server;
+  server_name botanicus.me default_server;
 
   # http://wiki.nginx.org/Pitfalls#VirtualBox
   sendfile off;
@@ -13,6 +13,6 @@ server {
   location / {
     index app.html;
     # index build.html;
-    root /webs/101ideas.cz/content;
+    root /webs/botanicus.me/content;
   }
 }
