Page loading optimised.

--- a/vhost.conf
+++ b/vhost.conf
@@ -6,13 +6,11 @@ server {
   sendfile off;
 
   # This returns HTTP 200 on any
-  # route and serves build.html.
-  # error_page 404 = /build.html;
+  # route and serves app.html.
   error_page 404 = /app.html;
 
   location / {
     index app.html;
-    # index build.html;
     root /webs/botanicus.me/content;
   }
 }
