Expand abbr on tap.

--- a/content/bower.json
+++ b/content/bower.json
@@ -17,7 +17,6 @@
     "angular-route": "~1.4.0",
     "bootstrap": "~3.3.4",
     "angularjs": "1.4",
-    "github-fork-ribbon-css": "~0.1.1",
-    "angular-tooltips": "~0.1.10"
+    "github-fork-ribbon-css": "~0.1.1"
   }
 }
