--- a/vhost.conf
+++ b/vhost.conf
@@ -9,6 +9,10 @@ server {
   # route and serves app.html.
   error_page 404 = /app.html;
 
+  location /cv {
+    return 302 https://www.evernote.com/l/AAXzGZpM3MJFA58ZRTPN0_jalvbhGjIzKqg;
+  }
+
   location / {
     index app.html;
     root /webs/botanicus.me/content;
