--- a/content/bower.json
+++ b/content/bower.json
@@ -16,7 +16,8 @@
   "dependencies": {
     "angular-route": "~1.4.0",
     "bootstrap": "~3.3.4",
-    "angularjs": "1.4",
-    "github-fork-ribbon-css": "~0.1.1"
+    "angular": "1.4",
+    "github-fork-ribbon-css": "~0.1.1",
+    "font-awesome": "~4.3.0"
   }
 }
